required file added

--- a/admin/view/html/catalog/citation_list.html
+++ b/admin/view/html/catalog/citation_list.html
@@ -58,7 +58,7 @@
                     <a href="<?php echo $add; ?>" data-toggle="tooltip" title="<?php echo $button_add; ?>"
                         class="btn btn-primary btn-bold"><i class="fa fa-plus"></i></a>
                     <button type="button" data-toggle="tooltip" title="<?php echo $button_delete; ?>"
-                        class="btn btn-danger btn-bold" onclick="confirm('<?php echo $text_confirm; ?>') ? $('#form-team-group').submit() :
+                        class="btn btn-danger btn-bold" onclick="confirm('<?php echo $text_confirm; ?>') ? $('#form-citation-group').submit() :
                         false;"><i class="fa fa-trash-alt"></i></button>
                     <div class="float-right tableTools-container"></div>
                 </div>
@@ -74,27 +74,18 @@
                     <!-- /.card-header -->
                     <div class="card-body">
                         <form action="<?php echo $delete; ?>" method="POST" enctype="multipart/form-data"
-                            id="form-team-group">
+                            id="form-citation-group">
                             <div class="table-responsive">
-                                <table id="table_team" class="table table-bordered table-hover">
+                                <table id="table_citation" class="table table-bordered table-hover">
                                     <thead>
                                         <tr>
                                             <th style="width: 1px;" class="text-center no-sort"><input type="checkbox"
                                                     onclick="$('input[name*=\'selected\']').trigger('click');" /></th>
                                             <th>
-                                                <?php echo $column_club; ?>
+                                                <?php echo $column_content; ?>
                                             </th>
                                             <th>
-                                                <?php echo $column_name; ?>
-                                            </th>
-                                            <th>
-                                                <?php echo $column_position; ?>
-                                            </th>
-                                            <th>
-                                                <?php echo $column_mobile; ?>
-                                            </th>
-                                            <th>
-                                                <?php echo $column_email; ?>
+                                                <?php echo $column_value; ?>
                                             </th>
                                             <th class="no-sort">
                                                 <?php echo $column_action; ?>
@@ -102,35 +93,26 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <?php if($teams) : ?>
-                                        <?php foreach($teams as $team) : ?>
+                                        <?php if($citations) : ?>
+                                        <?php foreach($citations as $citation) : ?>
                                         <tr>
                                             <td class="text-center">
-                                                <?php if(in_array($team['team_id'], $selected)) : ?>
+                                                <?php if(in_array($citation['citation_id'], $selected)) : ?>
                                                 <input type="checkbox" name="selected[]"
-                                                    value="<?php echo $team['team_id']; ?>"
+                                                    value="<?php echo $citation['citation_id']; ?>"
                                                     checked="checked" />
                                                 <?php else : ?>
                                                 <input type="checkbox" name="selected[]"
-                                                    value="<?php echo $team['team_id']; ?>" />
+                                                    value="<?php echo $citation['citation_id']; ?>" />
                                                 <?php endif; ?>
                                             </td>
                                             <td class="text-left">
-                                                <?php echo $team['club_name']; ?>
+                                                <?php echo $citation['content']; ?>
                                             </td>
                                             <td class="text-left">
-                                                <?php echo $team['name']; ?>
+                                                <?php echo $citation['value']; ?>
                                             </td>
-                                            <td class="text-left">
-                                                <?php echo $team['position']; ?>
-                                            </td>
-                                            <td class="text-left">
-                                                <?php echo $team['mobile']; ?>
-                                            </td>
-                                            <td class="text-left">
-                                                <?php echo $team['email']; ?>
-                                            </td>
-                                            <td class="text-left"><a href="<?php echo $team['edit']; ?>"
+                                            <td class="text-left"><a href="<?php echo $citation['edit']; ?>"
                                                     data-toggle="tooltip" title="<?php echo $button_edit; ?>"
                                                     class="btn btn-primary"><i class="fa fa-pencil-alt"></i></a>
                                             </td>
@@ -162,7 +144,7 @@
 <?php echo $footer; ?>
 <script type="text/javascript">
     $(function () {
-        var table = $('#table_team').DataTable({
+        var table = $('#table_citation').DataTable({
             "order": [
                 [1, 'asc']
             ],
@@ -267,7 +249,7 @@
             });
         }, 500);
 
-        $(document).on('click', '#table_team .dropdown-toggle', function (e) {
+        $(document).on('click', '#table_citation .dropdown-toggle', function (e) {
             e.stopImmediatePropagation();
             e.stopPropagation();
             e.preventDefault();
