--- a/admin/view/html/catalog/citation_form.html
+++ b/admin/view/html/catalog/citation_form.html
@@ -75,87 +75,35 @@
                           id="form-team" class="form-horizontal">
                         <div class="card-body">
                             <div class="form-group row required">
-                                <label for="input-name" class="col-sm-2 col-form-label">
-                                    <?php echo $entry_name; ?></label>
+                                <label for="input-content" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_content; ?></label>
 
                                 <div class="col-sm-10">
-                                    <input type="text" name="name" value="<?php echo $name; ?>"
-                                           placeholder="<?php echo $entry_name; ?>" class="form-control"
-                                           id="input-name" />
-                                    <?php if($name_err) : ?>
+                                    <input type="text" name="content" value="<?php echo $content; ?>"
+                                           placeholder="<?php echo $entry_content; ?>" class="form-control"
+                                           id="input-content" />
+                                    <?php if($content_err) : ?>
                                     <span class="help-block">
-                                        <?php echo $name_err; ?></span>
+                                        <?php echo $content_err; ?></span>
                                     <?php endif; ?>
                                 </div>
                             </div>
                             
-                            <div class="form-group row">
-                                <label for="input-club" class="col-sm-2 col-form-label">
-                                    <?php echo $entry_club; ?></label>
-
-                                <div class="col-sm-10">
-                                    <select name="club_id" class="form-control" id="input-club">
-                                        <?php foreach($clubs as $club) : ?>
-                                        <?php if($user_group['club_id'] == $club_id) : ?>
-                                        <option value="<?php echo $club['club_id']; ?>" selected="selected">
-                                            <?php echo $club['club_name']; ?>
-                                        </option>
-                                        <?php else : ?>
-                                        <option value="<?php echo $club['club_id']; ?>">
-                                            <?php echo $club['club_name']; ?>
-                                        </option>
-                                        <?php endif; ?>
-                                        <?php endforeach; ?>
-                                    </select>
-                                </div>
-                            </div>
-                            
                             <div class="form-group row required">
-                                <label for="input-position" class="col-sm-2 col-form-label">
-                                    <?php echo $entry_position; ?></label>
+                                <label for="input-value" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_value; ?></label>
 
                                 <div class="col-sm-10">
-                                    <input type="text" name="position" value="<?php echo $position; ?>"
-                                           placeholder="<?php echo $entry_position; ?>" class="form-control"
-                                           id="input-position" />
-                                    <?php if($position_err) : ?>
+                                    <input type="text" name="value" value="<?php echo $value; ?>"
+                                           placeholder="<?php echo $entry_value; ?>" class="form-control"
+                                           id="input-value" />
+                                    <?php if($value_err) : ?>
                                     <span class="help-block">
-                                        <?php echo $position_err; ?></span>
+                                        <?php echo $value_err; ?></span>
                                     <?php endif; ?>
                                 </div>
                             </div>
                             
-                             
-                            <div class="form-group row required">
-                                <label for="input-mobile" class="col-sm-2 col-form-label">
-                                    <?php echo $entry_mobile; ?></label>
-
-                                <div class="col-sm-10">
-                                    <input type="text" name="mobile" value="<?php echo $mobile; ?>"
-                                           placeholder="<?php echo $entry_mobile; ?>" class="form-control"
-                                           id="input-mobile" />
-                                    <?php if($mobile_err) : ?>
-                                    <span class="help-block">
-                                        <?php echo $mobile_err; ?></span>
-                                    <?php endif; ?>
-                                </div>
-                            </div>
-
-                            <div class="form-group row required">
-                                <label for="input-email" class="col-sm-2 col-form-label">
-                                    <?php echo $entry_email; ?></label>
-
-                                <div class="col-sm-10">
-                                    <input type="email" name="email" value="<?php echo $email; ?>"
-                                           placeholder="<?php echo $entry_email; ?>" class="form-control"
-                                           id="input-email" />
-                                    <?php if($email_err) : ?>
-                                    <span class="help-block">
-                                        <?php echo $email_err; ?></span>
-                                    <?php endif; ?>
-                                </div>
-                            </div>
-
                             <div class="form-group row">
                                 <label for="input-status" class="col-sm-2 col-form-label">
                                     <?php echo $entry_status; ?></label>
