--- a/admin/view/html/catalog/club_form.html
+++ b/admin/view/html/catalog/club_form.html
@@ -74,6 +74,21 @@
                     <form action="<?php echo $action; ?>" method="POST" enctype="multipart/form-data"
                           id="form-team" class="form-horizontal">
                         <div class="card-body">
+                             <div class="form-group row required">
+                                <label for="input-date" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_date; ?></label>
+
+                                <div class="col-sm-10">
+                                    <input type="month" name="date" value="<?php echo $date; ?>"
+                                            class="form-control"
+                                           id="input-date" />
+                                    <?php if($date_err) : ?>
+                                    <span class="help-block">
+                                        <?php echo $date_err; ?></span>
+                                    <?php endif; ?>
+                                </div>
+                            </div>
+                            
                             <div class="form-group row required">
                                 <label for="input-name" class="col-sm-2 col-form-label">
                                     <?php echo $entry_name; ?></label>
@@ -88,44 +103,22 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
-                            <div class="form-group row">
-                                <label for="input-club" class="col-sm-2 col-form-label">
-                                    <?php echo $entry_club; ?></label>
-
-                                <div class="col-sm-10">
-                                    <select name="club_id" class="form-control" id="input-club">
-                                        <?php foreach($clubs as $club) : ?>
-                                        <?php if($user_group['club_id'] == $club_id) : ?>
-                                        <option value="<?php echo $club['club_id']; ?>" selected="selected">
-                                            <?php echo $club['club_name']; ?>
-                                        </option>
-                                        <?php else : ?>
-                                        <option value="<?php echo $club['club_id']; ?>">
-                                            <?php echo $club['club_name']; ?>
-                                        </option>
-                                        <?php endif; ?>
-                                        <?php endforeach; ?>
-                                    </select>
-                                </div>
-                            </div>
-                            
+                           
                             <div class="form-group row required">
-                                <label for="input-position" class="col-sm-2 col-form-label">
-                                    <?php echo $entry_position; ?></label>
+                                <label for="input-president" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_president; ?></label>
 
                                 <div class="col-sm-10">
-                                    <input type="text" name="position" value="<?php echo $position; ?>"
-                                           placeholder="<?php echo $entry_position; ?>" class="form-control"
-                                           id="input-position" />
-                                    <?php if($position_err) : ?>
+                                    <input type="text" name="president" value="<?php echo $president; ?>"
+                                           placeholder="<?php echo $entry_president; ?>" class="form-control"
+                                           id="input-president" />
+                                    <?php if($president_err) : ?>
                                     <span class="help-block">
-                                        <?php echo $position_err; ?></span>
+                                        <?php echo $president_err; ?></span>
                                     <?php endif; ?>
                                 </div>
                             </div>
                             
-                             
                             <div class="form-group row required">
                                 <label for="input-mobile" class="col-sm-2 col-form-label">
                                     <?php echo $entry_mobile; ?></label>
@@ -155,7 +148,53 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
+                            
+                            <div class="form-group row required">
+                                <label for="input-password" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_password; ?></label>
 
+                                <div class="col-sm-10">
+                                    <input type="password" name="password" value="<?php echo $password; ?>"
+                                           placeholder="<?php echo $entry_password; ?>" class="form-control"
+                                           id="input-password" />
+                                    <?php if($password_err) : ?>
+                                    <span class="help-block">
+                                        <?php echo $password_err; ?></span>
+                                    <?php endif; ?>
+                                </div>
+                            </div>
+                            
+                            <div class="form-group row required">
+                                <label for="input-website" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_website; ?></label>
+
+                                <div class="col-sm-10">
+                                    <input type="text" name="website" value="<?php echo $website; ?>"
+                                           placeholder="<?php echo $entry_website; ?>" class="form-control"
+                                           id="input-website" />
+                                    <?php if($website_err) : ?>
+                                    <span class="help-block">
+                                        <?php echo $website_err; ?></span>
+                                    <?php endif; ?>
+                                </div>
+                            </div>
+                            
+                            <div class="form-group row">
+                                <label for="input-image" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_image; ?></label>
+
+                                <div class="col-sm-10">
+                                    <div class="card image">
+                                        <a href="" id="thumb-image" data-toggle="image">
+                                            <img src="<?php echo $thumb; ?>" alt="" title="" id="thumb-image"
+                                                 data-placeholder="<?php echo $placeholder; ?>" class="card-img-top" />
+                                        </a>
+                                        <input type="hidden" name="image" value="<?php echo $image; ?>"
+                                               id="input-image" />
+                                    </div>
+                                </div>
+                            </div>
+                            
                             <div class="form-group row">
                                 <label for="input-status" class="col-sm-2 col-form-label">
                                     <?php echo $entry_status; ?></label>
