new files added

--- a/admin/view/html/user/user_group_list.html
+++ b/admin/view/html/user/user_group_list.html
@@ -61,7 +61,7 @@
                         class="btn btn-danger btn-bold"
                         onclick="confirm('<?php echo $text_confirm; ?>') ? $('#form-user-group').submit() : false;"><i
                             class="fa fa-trash-alt"></i></button>
-                    <div class="pull-right tableTools-container"></div>
+                    <div class="float-right tableTools-container"></div>
                 </div>
             </div>
             <div class="col-12">
