--- a/admin/view/html/catalog/center_list.html
+++ b/admin/view/html/catalog/center_list.html
@@ -58,9 +58,8 @@
                     <a href="<?php echo $add; ?>" data-toggle="tooltip" title="<?php echo $button_add; ?>"
                         class="btn btn-primary btn-bold"><i class="fa fa-plus"></i></a>
                     <button type="button" data-toggle="tooltip" title="<?php echo $button_delete; ?>"
-                        class="btn btn-danger btn-bold"
-                        onclick="confirm('<?php echo $text_confirm; ?>') ? $('#form-user').submit() : false;"><i
-                            class="fa fa-trash-alt"></i></button>
+                        class="btn btn-danger btn-bold" onclick="confirm('<?php echo $text_confirm; ?>') ? $('#form-center-group').submit() :
+                        false;"><i class="fa fa-trash-alt"></i></button>
                     <div class="float-right tableTools-container"></div>
                 </div>
             </div>
@@ -75,25 +74,27 @@
                     <!-- /.card-header -->
                     <div class="card-body">
                         <form action="<?php echo $delete; ?>" method="POST" enctype="multipart/form-data"
-                            id="form-user">
+                            id="form-center-group">
                             <div class="table-responsive">
-                                <table id="table_user" class="table table-bordered table-hover">
+                                <table id="table_center" class="table table-bordered table-hover">
                                     <thead>
                                         <tr>
                                             <th style="width: 1px;" class="text-center no-sort"><input type="checkbox"
-                                                    onclick="$('input[name*=\'selected\']').trigger('click');" />
+                                                    onclick="$('input[name*=\'selected\']').trigger('click');" /></th>
+                                            <th>
+                                                <?php echo $column_club; ?>
                                             </th>
                                             <th>
-                                                <?php echo $column_name; ?>
+                                                <?php echo $column_office_address; ?>
+                                            </th>
+                                            <th>
+                                                <?php echo $column_contact_person; ?>
+                                            </th>
+                                            <th>
+                                                <?php echo $column_mobile; ?>
                                             </th>
                                             <th>
                                                 <?php echo $column_email; ?>
-                                            </th>
-                                            <th>
-                                                <?php echo $column_status; ?>
-                                            </th>
-                                            <th>
-                                                <?php echo $column_date_added; ?>
                                             </th>
                                             <th class="no-sort">
                                                 <?php echo $column_action; ?>
@@ -101,38 +102,42 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <?php if($users) : ?>
-                                        <?php foreach($users as $user) : ?>
+                                        <?php if($centers) : ?>
+                                        <?php foreach($centers as $center) : ?>
                                         <tr>
                                             <td class="text-center">
-                                                <?php if(in_array($user['user_id'], $selected)) : ?>
+                                                <?php if(in_array($center['center_id'], $selected)) : ?>
                                                 <input type="checkbox" name="selected[]"
-                                                    value="<?php echo $user['user_id']; ?>" checked="checked" />
+                                                    value="<?php echo $center['center_id']; ?>"
+                                                    checked="checked" />
                                                 <?php else : ?>
                                                 <input type="checkbox" name="selected[]"
-                                                    value="<?php echo $user['user_id']; ?>" />
+                                                    value="<?php echo $center['center_id']; ?>" />
                                                 <?php endif; ?>
                                             </td>
                                             <td class="text-left">
-                                                <?php echo $user['username']; ?>
+                                                <?php echo $center['club_name']; ?>
                                             </td>
                                             <td class="text-left">
-                                                <?php echo $user['email']; ?>
+                                                <?php echo $center['address']; ?>
                                             </td>
                                             <td class="text-left">
-                                                <?php echo $user['status']; ?>
+                                                <?php echo $center['contact_person']; ?>
                                             </td>
                                             <td class="text-left">
-                                                <?php echo $user['date_added']; ?>
+                                                <?php echo $center['mobile']; ?>
                                             </td>
-                                            <td class="text-left"><a href="<?php echo $user['edit']; ?>"
+                                            <td class="text-left">
+                                                <?php echo $center['email']; ?>
+                                            </td>
+                                            <td class="text-left"><a href="<?php echo $center['edit']; ?>"
                                                     data-toggle="tooltip" title="<?php echo $button_edit; ?>"
                                                     class="btn btn-primary"><i class="fa fa-pencil-alt"></i></a></td>
                                         </tr>
                                         <?php endforeach; ?>
                                         <?php else : ?>
                                         <tr>
-                                            <td class="text-center" colspan="6">
+                                            <td class="text-center" colspan="5">
                                                 <?php echo $text_no_results; ?>
                                             </td>
                                         </tr>
@@ -156,7 +161,7 @@
 <?php echo $footer; ?>
 <script type="text/javascript">
     $(function () {
-        var table = $('#table_user').DataTable({
+        var table = $('#table_center').DataTable({
             "order": [
                 [1, 'asc']
             ],
@@ -177,52 +182,52 @@
 
         new $.fn.dataTable.Buttons(table, {
             buttons: [{
-                    "extend": "colvis",
-                    "text": "<i class='fa fa-search'></i> <span hidden><?php echo $text_dt_column; ?></span>",
-                    "className": "dt-button btn-primary",
-                    "init": function (api, node, config) {
-                        $(node).removeClass('btn-default');
-                    },
-                    columns: ':not(:first):not(:last)'
+                "extend": "colvis",
+                "text": "<i class='fa fa-search'></i> <span hidden><?php echo $text_dt_column; ?></span>",
+                "className": "dt-button btn-primary",
+                "init": function (api, node, config) {
+                    $(node).removeClass('btn-default');
+                },
+                columns: ':not(:first):not(:last)'
+            },
+            {
+                "extend": "copy",
+                "text": "<i class='fa fa-copy'></i> <span hidden><?php echo $text_dt_copy; ?></span>",
+                "className": "dt-button btn-info",
+                "init": function (api, node, config) {
+                    $(node).removeClass('btn-default');
+                },
+            },
+            {
+                "extend": "collection",
+                "text": "<i class='fa fa-download'></i> <span hidden><?php echo $text_dt_file_export; ?></span>",
+                "className": "dt-button btn-success",
+                "init": function (api, node, config) {
+                    $(node).removeClass('btn-default');
+                },
+                "buttons": [{
+                    "extend": "csv",
+                    "text": "<i class='fa fa-database'></i> <span><?php echo $text_dt_export_csv; ?></span>"
                 },
                 {
-                    "extend": "copy",
-                    "text": "<i class='fa fa-copy'></i> <span hidden><?php echo $text_dt_copy; ?></span>",
-                    "className": "dt-button btn-info",
-                    "init": function (api, node, config) {
-                        $(node).removeClass('btn-default');
-                    },
+                    "extend": "excel",
+                    "text": "<i class='fa fa-file-excel-o'></i> <span><?php echo $text_dt_export_excel; ?></span>"
                 },
                 {
-                    "extend": "collection",
-                    "text": "<i class='fa fa-download'></i> <span hidden><?php echo $text_dt_file_export; ?></span>",
-                    "className": "dt-button btn-success",
-                    "init": function (api, node, config) {
-                        $(node).removeClass('btn-default');
-                    },
-                    "buttons": [{
-                            "extend": "csv",
-                            "text": "<i class='fa fa-database'></i> <span><?php echo $text_dt_export_csv; ?></span>"
-                        },
-                        {
-                            "extend": "excel",
-                            "text": "<i class='fa fa-file-excel-o'></i> <span><?php echo $text_dt_export_excel; ?></span>"
-                        },
-                        {
-                            "extend": "pdf",
-                            "text": "<i class='fa fa-file-pdf-o'></i> <span><?php echo $text_dt_export_pdf; ?></span>"
-                        }
-                    ]
-                },
-                {
-                    "extend": "print",
-                    "text": "<i class='fa fa-print'></i> <span hidden><?php echo $text_dt_print; ?></span>",
-                    "className": 'dt-button',
-                    autoPrint: false,
-                    exportOptions: {
-                        columns: ':not(:last)',
-                    }
-                },
+                    "extend": "pdf",
+                    "text": "<i class='fa fa-file-pdf-o'></i> <span><?php echo $text_dt_export_pdf; ?></span>"
+                }
+                ]
+            },
+            {
+                "extend": "print",
+                "text": "<i class='fa fa-print'></i> <span hidden><?php echo $text_dt_print; ?></span>",
+                "className": 'dt-button',
+                autoPrint: false,
+                exportOptions: {
+                    columns: ':not(:last)',
+                }
+            },
             ]
         });
         table.buttons().container().appendTo($('.tableTools-container'));
@@ -261,7 +266,7 @@
             });
         }, 500);
 
-        $(document).on('click', '#table_user .dropdown-toggle', function (e) {
+        $(document).on('click', '#table_center .dropdown-toggle', function (e) {
             e.stopImmediatePropagation();
             e.stopPropagation();
             e.preventDefault();
