--- a/admin/view/html/setting/setting.html
+++ b/admin/view/html/setting/setting.html
@@ -683,6 +683,22 @@
                                             </div>
                                         </div>
                                     </div>
+                                    
+                                    <div class="form-group row">
+                                        <label for="input-logo"
+                                            class="col-sm-2 col-form-label"><span></span><?php echo $entry_district_logo; ?></label>
+
+                                        <div class="col-sm-10">
+                                            <div class="card image">
+                                                <a href="" id="thumb-district-logo" data-toggle="image" class="img-thumbnail">
+                                                    <img src="<?php echo $district_logo; ?>" alt="" title=""
+                                                        data-placeholder="<?php echo $placeholder; ?>" />
+                                                </a>
+                                                <input type="hidden" name="config_district_logo"
+                                                    value="<?php echo $config_district_logo; ?>" id="input-district-logo" />
+                                            </div>
+                                        </div>
+                                    </div>
 
                                     <div class="form-group row">
                                         <label for="input-icon" class="col-sm-2 col-form-label"><span
@@ -703,18 +719,18 @@
                                     </div>
 
                                     <div class="form-group row">
-                                        <label for="input-logo-colour"
+                                        <label for="input-logo-governor"
                                             class="col-sm-2 col-form-label"><?php echo $entry_logo_colour; ?></span></label>
 
                                         <div class="col-sm-10">
                                             <div class="card image">
-                                                <a href="" id="thumb-logo-colour" data-toggle="image"
+                                                <a href="" id="thumb-logo-governor" data-toggle="image"
                                                     class="img-thumbnail">
-                                                    <img src="<?php echo $logo_colour; ?>" alt="" title=""
+                                                    <img src="<?php echo $logo_governor; ?>" alt="" title=""
                                                         data-placeholder="<?php echo $placeholder; ?>" />
                                                 </a>
-                                                <input type="hidden" name="config_logo_colour"
-                                                    value="<?php echo $config_logo_colour; ?>" id="input-logo-colour" />
+                                                <input type="hidden" name="config_governor_logo"
+                                                    value="<?php echo $config_governor_logo; ?>" id="input-logo-governor" />
                                             </div>
                                         </div>
                                     </div>
