--- a/admin/view/html/catalog/club_form.html
+++ b/admin/view/html/catalog/club_form.html
@@ -74,21 +74,24 @@
                     <form action="<?php echo $action; ?>" method="POST" enctype="multipart/form-data"
                           id="form-team" class="form-horizontal">
                         <div class="card-body">
-                             <div class="form-group row required">
+                            <div class="form-group row required">
                                 <label for="input-date" class="col-sm-2 col-form-label">
                                     <?php echo $entry_date; ?></label>
 
                                 <div class="col-sm-10">
-                                    <input type="month" name="date" value="<?php echo $date; ?>"
-                                            class="form-control"
-                                           id="input-date" />
+                                    <?php $curr_date = date("Y-m");?>
+                                    <?php if ($date): ?>
+                                    <input type="month" name="date" value="<?php echo $date; ?>" class="form-control" id="input-date" />
+                                    <?php else : ?>
+                                    <input type="month" name="date" value="<?php echo $curr_date; ?>" class="form-control" id="input-date" />
+                                    <?php endif; ?>
                                     <?php if($date_err) : ?>
                                     <span class="help-block">
                                         <?php echo $date_err; ?></span>
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row required">
                                 <label for="input-name" class="col-sm-2 col-form-label">
                                     <?php echo $entry_name; ?></label>
@@ -103,7 +106,7 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row required">
                                 <label for="input-secretary" class="col-sm-2 col-form-label">
                                     <?php echo $entry_secretary; ?></label>
@@ -118,7 +121,7 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row required">
                                 <label for="input-governor" class="col-sm-2 col-form-label">
                                     <?php echo $entry_governor; ?></label>
@@ -133,7 +136,7 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                           
+
                             <div class="form-group row required">
                                 <label for="input-president" class="col-sm-2 col-form-label">
                                     <?php echo $entry_president; ?></label>
@@ -148,7 +151,7 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row required">
                                 <label for="input-mobile" class="col-sm-2 col-form-label">
                                     <?php echo $entry_mobile; ?></label>
@@ -178,7 +181,7 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row required">
                                 <label for="input-password" class="col-sm-2 col-form-label">
                                     <?php echo $entry_password; ?></label>
@@ -193,7 +196,7 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row required">
                                 <label for="input-website" class="col-sm-2 col-form-label">
                                     <?php echo $entry_website; ?></label>
@@ -208,7 +211,7 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row">
                                 <label for="input-image" class="col-sm-2 col-form-label">
                                     <?php echo $entry_image; ?></label>
@@ -224,30 +227,22 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row">
                                 <label for="input-status" class="col-sm-2 col-form-label">
                                     <?php echo $entry_status; ?></label>
 
-                                <div class="col-sm-10">
-                                    <select name="status" class="form-control" id="input-status">
-                                        <?php if($status) : ?>
-                                        <option value="0">
-                                            <?php echo $text_disabled; ?>
-                                        </option>
-                                        <option value="1" selected="selected">
-                                            <?php echo $text_enabled; ?>
-                                        </option>
-                                        <?php else : ?>
-                                        <option value="0" selected="selected">
-                                            <?php echo $text_disabled; ?>
-                                        </option>
-                                        <option value="1">
-                                            <?php echo $text_enabled; ?>
-                                        </option>
-                                        <?php endif; ?>
-                                    </select>
-                                </div>
+                                 <div class="col-sm-10">
+                                        <select name="status" id="input-status" class="form-control">
+                                            <?php if($status) :?>
+                                            <option value="1" selected="selected"><?php echo $text_enabled; ?></option>
+                                            <option value="0"><?php echo $text_disabled; ?></option>
+                                            <?php else : ?>
+                                            <option value="1"><?php echo $text_enabled; ?></option>
+                                            <option value="0" selected="selected"><?php echo $text_disabled; ?></option>
+                                            <?php endif; ?>
+                                        </select>
+                                    </div>
                             </div>
                         </div>
                         <!-- /.box-body -->
